@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-11T01:03:42Z",
-  "count_outdated" : 1840,
-  "uniques_outdated" : 391,
+  "timestamp" : "2023-10-11T08:19:06Z",
+  "count_outdated" : 1844,
+  "uniques_outdated" : 392,
   "count" : 1975,
   "uniques" : 409,
   "views" : [
-    {
-      "timestamp": "2023-09-27T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-28T00:00:00Z",
       "count": 21,
