@@ -1,12 +1,7 @@
 {
-  "count": 135,
-  "uniques": 18,
+  "count": 131,
+  "uniques": 17,
   "views": [
-    {
-      "timestamp": "2023-09-27T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-28T00:00:00Z",
       "count": 21,
