@@ -1,3 +1,12 @@
+2023-10-11T08:19:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6479845667 # 1975
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
+* notice: last 14d: unq all: 17 131
+* notice: prev accum: outdated-unq outdated-all / unq all: 391 1840 / 409 1975
+* notice: next accum: outdated-unq outdated-all / unq all: 392 1844 / 409 1975
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-27] / []
+
 2023-10-11T01:03:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6476625234 # 1974
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
